Adresses review comments
Signed-off-by: Jonas Helming <jhelming@eclipsesource.com>

--- a/packages/ai-chat-ui/src/browser/style/index.css
+++ b/packages/ai-chat-ui/src/browser/style/index.css
@@ -288,6 +288,15 @@ div:last-child > .theia-ChatNode {
   overflow: auto;
 }
 
+.collapsible-arguments {
+  display: inline;
+}
+
+.collapsible-arguments-summary {
+  display: inline;
+  text-decoration: underline;
+}
+
 .theia-ResponseNode-ProgressMessage {
   font-weight: normal;
   color: var(--theia-descriptionForeground);
